viworksclient01/products/admin-panel/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: viworks
  labels:
    name: viworks
